--- a/utility/esp_idf/CMakeLists.txt
+++ b/utility/esp_idf/CMakeLists.txt
@@ -13,3 +13,7 @@ idf_component_register(
     INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../"
     REQUIRES driver esp_timer # esp_driver_gpio esp_driver_spi
 )
+
+set(RF24_DRIVER_SOURCES
+${CMAKE_CURRENT_LIST_DIR}/spi.cpp
+)
